# Game

./: .gitignore  CMakeLists.txt  README.md  UML_Diagram.md  term.txt
Release/: Game
Source/: card.cpp  card.h  character.cpp  character.h  credits.cpp  credits.h  gamedefs.h  gameplayScreen.cpp  gameplayScreen.h  gamescreen.cpp  gamescreen.h  logo.cpp  logo.h  main.cpp  pickCard.cpp  pickCard.h  readData.cpp  readData.h  title.cpp  title.h  turn.cpp  turn.h  utils.cpp  utils.h
Source/cards/: DeckManager.cpp  DeckManager.h  card.cpp  card.h
Source/core/: Animation.h  Resource.cpp  Resource.h  scene.cpp  scene.h
Source/game_objects/actions/: DamageAction.h  HealAction.h  IAction.h
Source/game_objects/character/: Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h
Source/scenes/: ChoseChar.cpp  ChoseChar.h  battleScene.cpp  battleScene.h  credits.cpp  credits.h  mainMenu.cpp  mainMenu.h  pickCard.cpp  pickCard.h
Source/utils/: Params.h  gamedefs.h
headers/: Card.h  Character.h  Combat.h  Effect.h
resources/: dataGame.txt
resources/data/card/Sirin/: ATTACK.txt  HEAL.txt
resources/data/card/TeRiRi/: ATTACK.txt  HEAL.txt  name.txt
resources/data/character/TeRiRi/: name.txt
resources/textures/character/: nameFolder.txt
resources/textures/character/Sirin/: name.txt
src/: Cards.cpp  Character.cpp  Combat.cpp  main.cpp
